--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   },
   "homepage": "https://github.com/JYoung32/project-3#readme",
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "concurrently": "^5.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.8.9",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "reactstrap": "^8.4.1"
   }
 }
