--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "moment": "^2.24.0",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
