--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "momentjs": "^2.0.0",
     "mongoose": "^5.8.9",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
