--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "momentjs": "^2.0.0",
     "mongoose": "^5.8.9",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7"
   },
