--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "momentjs": "^2.0.0",
     "mongoose": "^5.8.9",
+    "node-sass": "^4.13.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
