was fucking around with fonts, unsuccesful

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-google-font-loader": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
